<resources>
    <string name="app_name">NeWork</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Error loading data</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Log In</string>
    <string name="sign_up">Registration</string>
    <string name="sign_out">Log Out</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="image_attachment">Image attachment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="login_form">Login form</string>
    <string name="registration_fragment">Registration fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_author_avatar">Event author avatar</string>
    <string name="speakers">Speakers</string>
    <string name="partisipates">Partisipates</string>
    <string name="add_event">Add event</string>
    <string name="chooser_share_event">Share event</string>
    <string name="failed_autorization">Authorisation Error</string>
    <string name="successuful_autorization">Successuful autorization</string>
    <string name="registration_failed">Registration failed</string>
    <string name="registration_successful">Registration successful</string>
    <string name="type_of_event">Type of event</string>
    <string name="registration_form">Registration form</string>
    <string name="photo">Photo</string>
    <string name="make_photo">Make photo</string>
    <string name="select_photo">Select photo</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registr">Registr</string>
    <string name="play">Play</string>
    <string name="play_pause_stop">Play/Pause/Stop</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="company">Company</string>
    <string name="position">Position</string>
    <string name="site">Site</string>
    <string name="options_menu">Options menu</string>
    <string name="add_job">Add job</string>
    <string name="please_fill_all_fields">Please, fill all fields</string>
    <string name="jobs">Jobs</string>
    <string name="company_name">Company name</string>
    <string name="event_date">Event date</string>
    <string name="event_time">Event time</string>
    <string name="event_type">Event type</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="event_info">Event info</string>
    <string name="fill_in_for_login">Fill in for login</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="already_have_account">Already have account?</string>
    <string name="icon_of_toolbar">Icon of toolbar</string>
    <string name="location">Location</string>
    <string name="link">Link</string>
    <string name="description_select_video">Select video</string>
    <string name="description_select_audio">Select audio</string>
    <string name="button_for_my_location">Button for my location</string>
    <string name="fragment_map">Fragment map</string>
    <string name="user_avatar">User avatar</string>
</resources>